--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -20,6 +20,13 @@
     padding: 0 2rem;
   }
 
+  .carousel-track {
+    display: flex;
+    transition: transform 0.4s ease;
+    will-change: transform;
+    gap: 20px;
+  }
+
   .carousel-wrapper {
     position: relative;
 
@@ -299,7 +306,7 @@
 @media (max-width: 768px) {
   .featured-books {
     padding: 1.25rem 0 1.875rem 0;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
 
     .carousel-wrapper {
       .flickity-button {
@@ -320,7 +327,7 @@
     }
 
     .carousel {
-      height: 250px;
+      height: 260px;
       .carousel-cell {
         width: 140px;
         gap: 5px;
